commit before pull

--- a/frontend/src/components/Info/Info.module.scss
+++ b/frontend/src/components/Info/Info.module.scss
@@ -12,6 +12,7 @@ $font-name: "Roboto", sans-serif;
   height: auto;
 
   padding: 56px 258px 60px;
+  overflow: hidden;
 
   .fastTaskiInfo {
     display: flex;
