--- a/frontend/src/components/Panels/Panels.module.scss
+++ b/frontend/src/components/Panels/Panels.module.scss
@@ -11,7 +11,7 @@ $font-name: "Roboto", sans-serif;
   padding: 60px 258px 120px;
   gap: 12px;
 
-  overflow-x: hidden;
+  overflow: hidden;
 
   .firstRow {
     display: flex;
