--- a/frontend/src/components/Info/Info.module.scss
+++ b/frontend/src/components/Info/Info.module.scss
@@ -6,7 +6,8 @@ $font-name: "Roboto", sans-serif;
   align-items: center;
   gap: 12px;
 
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
   height: auto;
 
   padding: 56px 258px 60px;
