--- a/frontend/src/components/Panels/Panels.module.scss
+++ b/frontend/src/components/Panels/Panels.module.scss
@@ -12,6 +12,9 @@ $font-name: "Roboto", sans-serif;
 
   overflow: hidden;
 
+  width: 100%;
+  max-width: 100%;
+
   .firstRow {
     display: flex;
     flex-direction: row;
@@ -33,8 +36,6 @@ $font-name: "Roboto", sans-serif;
       img {
         position: absolute;
 
-        width: 285px;
-        height: 209px;
         top: 45px;
         left: 265px;
       }
@@ -57,6 +58,13 @@ $font-name: "Roboto", sans-serif;
         border-radius: 8px;
 
         white-space: nowrap;
+
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+          background-color: #0059ff;
+        }
       }
 
       .leftBlockText {
@@ -69,9 +77,7 @@ $font-name: "Roboto", sans-serif;
 
           font-family: $font-name;
           font-weight: 700;
-          font-size: 24px;
-          line-height: 28.13px;
-          letter-spacing: 0%;
+          font-size: 25px;
         }
 
         h3 {
@@ -80,8 +86,6 @@ $font-name: "Roboto", sans-serif;
           font-family: $font-name;
           font-weight: 400;
           font-size: 12px;
-          line-height: 14.06px;
-          letter-spacing: 0%;
 
           word-break: break-word;
           white-space: normal;
@@ -145,4 +149,102 @@ $font-name: "Roboto", sans-serif;
       }
     }
   }
+
+  .secondRow {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+
+    .leftBlockInSecondRow {
+      background-color: #ffffff;
+
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      width: 362px;
+      height: 254px;
+      padding: 28px 32px 24px;
+      border-radius: 16px;
+
+      h1 {
+        font-family: $font-name;
+        font-weight: 700;
+        font-size: 24px;
+      }
+
+      h3 {
+        font-family: $font-name;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14.06px;
+        letter-spacing: 0%;
+      }
+    }
+
+    .rightBlockInSecondRow {
+      position: relative;
+      background-color: #1f1f1f;
+
+      display: flex;
+      flex-direction: column;
+
+      width: 550px;
+      height: 254px;
+      justify-content: space-between;
+      padding: 28px 32px;
+      border-radius: 16px;
+
+      img {
+        position: absolute;
+        top: 73px;
+        left: 303px;
+      }
+
+      .aiTextBlock {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
+        h1 {
+          color: #ffffff;
+
+          font-family: $font-name;
+          font-weight: 700;
+          font-size: 24px;
+        }
+
+        .containerForLi {
+          display: flex;
+          flex-direction: column;
+          gap: 12px;
+
+          h3,
+          ul {
+            color: #ffffff;
+
+            font-family: $font-name;
+            font-weight: 400;
+            font-size: 12px;
+          }
+
+          ul {
+            padding-left: 16px;
+          }
+        }
+      }
+
+      .underTextAboutTarif {
+        color: #ffffff80;
+
+        font-family: $font-name;
+        font-weight: 400;
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1440px) {
+  
 }
