--- a/frontend/src/components/HomeRegistration/HomeRegistration.module.scss
+++ b/frontend/src/components/HomeRegistration/HomeRegistration.module.scss
@@ -1,10 +1,8 @@
-$font-name: "Roboto", sans-serif;
-
 .homeRegistrationContainer {
   position: relative;
   display: flex;
   flex-direction: row;
-  align-items:center;
+  align-items: center;
   justify-content: space-between;
   padding: 0px 258px 120px 258px;
 
@@ -22,14 +20,12 @@ $font-name: "Roboto", sans-serif;
     h1 {
       color: #ffffff;
 
-      font-family: $font-name;
       font-weight: 400;
       font-size: 32px;
 
       span {
         color: #6096fd;
 
-        font-family: $font-name;
         font-weight: 400;
         font-size: 32px;
         line-height: 37.5px;
@@ -49,7 +45,6 @@ $font-name: "Roboto", sans-serif;
         label {
           color: #ffffff;
 
-          font-family: $font-name;
           font-weight: 400;
           font-size: 12px;
         }
@@ -65,7 +60,6 @@ $font-name: "Roboto", sans-serif;
           border-radius: 6px;
           padding: 2px 8px;
 
-          font-family: $font-name;
           font-weight: 400;
           font-size: 16px;
         }
@@ -82,13 +76,12 @@ $font-name: "Roboto", sans-serif;
         border-radius: 8px;
         padding: 8px 16px;
 
-        font-family: $font-name;
         font-weight: 400;
         font-size: 16px;
 
         cursor: pointer;
         transition: all 0.3s ease-in-out;
-  
+
         &:hover {
           background-color: #0059ff;
         }
@@ -104,7 +97,6 @@ $font-name: "Roboto", sans-serif;
       h3 {
         color: #ffffff;
 
-        font-family: $font-name;
         font-weight: 400;
         font-size: 12px;
       }
@@ -115,11 +107,11 @@ $font-name: "Roboto", sans-serif;
         width: 100%;
         gap: 12px;
 
-        .yandexID, .vkID {
+        .yandexID,
+        .vkID {
           background-color: #ffffff;
           color: #161616;
           border: none;
-
 
           width: 175.5px;
           height: 36px;
@@ -127,13 +119,12 @@ $font-name: "Roboto", sans-serif;
           border-radius: 8px;
           padding: 8px 16px;
 
-          font-family: $font-name;
           font-weight: 500;
           font-size: 16px;
 
           cursor: pointer;
           transition: all 0.3s ease-in-out;
-    
+
           &:hover {
             background-color: grey;
           }
