--- a/frontend/src/components/TarifsText/TarifsText.module.scss
+++ b/frontend/src/components/TarifsText/TarifsText.module.scss
@@ -1,20 +1,12 @@
-.aboutBlock {
-  display: inline-flex;
-  height: 294px;
+.tarifsText {
   display: flex;
   padding: 16px 258px 49px 258px;
   justify-content: space-between;
   align-items: center;
-  gap: 106px;
-  margin: 56px 0 120px 0;
-}
-
-.aboutText {
-  width: 50%;
+  margin-bottom: 21px;
 
   h1 {
     color: #fff;
-
     font-size: 48px;
     font-style: normal;
     font-weight: 500;
@@ -24,7 +16,6 @@
 
   p {
     color: #fff;
-
     font-size: 32px;
     font-style: normal;
     font-weight: 400;
@@ -33,5 +24,13 @@
 
   span {
     color: #6096fd;
+  }
+
+  .imgContainer {
+    width: 362px;
+    height: 362px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
