--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -43,11 +43,14 @@
         cursor: pointer;
         transition: all 0.3s ease-in-out;
 
-        &:hover,
-        &:active,
-        &:focus {
+        &:hover {
           color: #ffffff;
         }
+      }
+
+      .active {
+        color: #ffffff;
+        font-weight: 500;
       }
     }
   }
@@ -76,9 +79,7 @@
       cursor: pointer;
       transition: all 0.3s ease-in-out;
 
-      &:hover,
-      &:active,
-      &:focus {
+      &:hover {
         color: #ffffff;
       }
     }
