--- a/frontend/src/components/HomeRegistration/HomeRegistration.module.scss
+++ b/frontend/src/components/HomeRegistration/HomeRegistration.module.scss
@@ -66,6 +66,9 @@
       }
 
       .registrationButton {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background-color: #6096fd;
         color: #ffffff;
         border: none;
@@ -84,50 +87,6 @@
 
         &:hover {
           background-color: #0059ff;
-        }
-      }
-    }
-
-    .otherVariant {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 8px;
-
-      h3 {
-        color: #ffffff;
-
-        font-weight: 400;
-        font-size: 12px;
-      }
-
-      .buttonContainer {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        gap: 12px;
-
-        .yandexID,
-        .vkID {
-          background-color: #ffffff;
-          color: #161616;
-          border: none;
-
-          width: 175.5px;
-          height: 36px;
-          justify-content: space-between;
-          border-radius: 8px;
-          padding: 8px 16px;
-
-          font-weight: 500;
-          font-size: 16px;
-
-          cursor: pointer;
-          transition: all 0.3s ease-in-out;
-
-          &:hover {
-            background-color: grey;
-          }
         }
       }
     }
