--- a/frontend/src/components/AboutPanel/AboutPanel.module.scss
+++ b/frontend/src/components/AboutPanel/AboutPanel.module.scss
@@ -81,11 +81,16 @@
     background: #6096fd;
     border: none;
     color: #fff;
+    transition: all 0.3s ease-in-out;
 
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+
+    &:hover {
+      background-color: #0059ff;
+    }
   }
 
   img {
