--- a/frontend/src/components/LoginForm/LoginForm.module.scss
+++ b/frontend/src/components/LoginForm/LoginForm.module.scss
@@ -39,7 +39,7 @@
     line-height: normal;
   }
 
-  button {
+  .continueBtn {
     display: flex;
     height: 36px;
     padding: 8px 16px;
@@ -53,5 +53,10 @@
     font-weight: 400;
     line-height: normal;
     margin: 32px 0 48px 0;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background-color: #0059ff;
+    }
   }
 }
