--- a/frontend/src/components/SuccessBanner/SuccessBunner.module.scss
+++ b/frontend/src/components/SuccessBanner/SuccessBunner.module.scss
@@ -41,5 +41,10 @@
     font-weight: 400;
     line-height: normal;
     margin-top: 25px;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background-color: #0059ff;
+    }
   }
 }
