--- a/frontend/src/components/TarifCard/TarifCard.module.scss
+++ b/frontend/src/components/TarifCard/TarifCard.module.scss
@@ -35,6 +35,11 @@
     align-items: center;
     border-radius: 8px;
     background: #fff;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background-color: grey;
+    }
   }
 
   .featuresTitle {
@@ -83,6 +88,11 @@
     border-radius: 8px;
     background: #6096fd;
     color: #fff;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background-color: #0059ff;
+    }
   }
 
   .featuresTitle {
