--- a/frontend/src/pages/Register/Register.module.scss
+++ b/frontend/src/pages/Register/Register.module.scss
@@ -77,5 +77,23 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background-color: #0059ff;
+    }
+  }
+}
+
+.loginText {
+  margin-top: 8px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+  a {
+    color: #5785dc;
   }
 }
