--- a/frontend/src/components/HomeRegistration/HomeRegistration.module.scss
+++ b/frontend/src/components/HomeRegistration/HomeRegistration.module.scss
@@ -1,13 +1,11 @@
 .homeRegistrationContainer {
-  position: relative;
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 157px;
   padding: 0px 258px 120px 258px;
 
   .homeRegistrationImage {
-    padding-left: 42px;
     top: -29px;
     left: 42px;
   }
@@ -22,6 +20,7 @@
 
       font-weight: 400;
       font-size: 32px;
+      text-wrap: nowrap;
 
       span {
         color: #6096fd;
@@ -87,6 +86,84 @@
 
         &:hover {
           background-color: #0059ff;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .homeRegistrationContainer {
+    padding: 0px 80px 120px;
+    gap: 59px;
+
+    .homeRegistrationImage {
+      width: 300px;
+      height: 300px;
+    }
+
+    .homeRegistrationPart {
+      justify-content: center;
+
+      h1 {
+        font-size: 20px;
+
+        span {
+          font-size: 20px;
+        }
+      }
+
+      .homeRegistrationForm {
+        .registrationInputContainer {
+          .inputForRegistration {
+            width: 249px;
+          }
+        }
+        .registrationButton {
+          width: 249px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .homeRegistrationContainer {
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr;
+    padding: 0px 20px 64px;
+    gap: 39px;
+
+    .homeRegistrationImage {
+      place-items: center;
+      order: 2;
+      width: 279px;
+      height: 279px;
+    }
+
+    .homeRegistrationPart {
+      order: 1;
+
+      h1 {
+        font-size: 24px;
+        text-align: center;
+
+        span {
+          font-size: 24px;
+          text-align: center;
+        }
+      }
+
+      .homeRegistrationForm {
+        .registrationInputContainer {
+          .inputForRegistration {
+            width: 268px;
+          }
+        }
+        .registrationButton {
+          width: 268px;
+          height: 36px;
         }
       }
     }
