--- a/frontend/src/components/AuthButtons/AuthButtons.module.scss
+++ b/frontend/src/components/AuthButtons/AuthButtons.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
+    gap: 8px;
 
   h3 {
     color: #ffffff;
@@ -14,6 +14,7 @@
   .buttonContainer {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     width: 100%;
     gap: 12px;
 
@@ -40,6 +41,35 @@
 
       &:hover {
         background-color: grey;
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .otherVariant {
+    .buttonContainer {
+      .yandexID,
+      .vkID {
+        width: 118.5px;
+        height: 28px;
+
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .otherVariant {
+    .buttonContainer {
+      .yandexID,
+      .vkID {
+        width: 128px;
+        height: 36px;
+
+        font-size: 16px;
+
       }
     }
   }
