--- a/frontend/src/components/Info/Info.module.scss
+++ b/frontend/src/components/Info/Info.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 12px;
+  justify-content: center;
+  gap: 94px;
 
   width: 100%;
   max-width: 100%;
@@ -17,16 +18,22 @@
     justify-content: center;
     gap: 16px;
 
+    .columnText {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      h1 {
+        color: #ffffff;
+
+        font-weight: 400;
+        font-size: 30px;
+        text-wrap: nowrap;
+      }
+    }
+
     img {
       width: 274px;
       height: 78px;
-    }
-
-    h1 {
-      color: #ffffff;
-
-      font-weight: 400;
-      font-size: 30px;
     }
 
     .spanElement {
@@ -37,5 +44,54 @@
   .image {
     width: 456px;
     height: 404px;
+  }
+}
+
+@media (max-width: 767px) {
+  .infoContainer {
+    flex-direction: column;
+    padding: 64px 20px 64px;
+    gap: 0;
+
+    .fastTaskiInfo {
+      align-items: center;
+
+      img {
+        width: 274.263671875px;
+        height: 78px;
+        border-radius: 0.38px;
+      }
+
+      .columnText {
+        align-items: center;
+        h1 {
+          font-size: 1.4rem;
+        }
+      }
+    }
+
+    .image {
+      width: 279px;
+      height: 248px;
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .infoContainer {
+    .fastTaskiInfo {
+      .columnText {
+
+
+        h1 {
+          font-size: 20px;
+        }
+      }
+    }
+
+    .image {
+      width: 300px;
+      height: 266px;
+    }
   }
 }
