--- a/frontend/src/components/Panels/Panels.module.scss
+++ b/frontend/src/components/Panels/Panels.module.scss
@@ -21,6 +21,7 @@
     .leftBlockInFirstRow {
       position: relative;
       background-color: #1f1f1f;
+      z-index: -1;
 
       display: flex;
       flex-direction: column;
@@ -175,6 +176,7 @@
     .rightBlockInSecondRow {
       position: relative;
       background-color: #1f1f1f;
+      z-index: -1;
 
       display: flex;
       flex-direction: column;
