feat: add tags routes, update cache, fix tasks manager

--- a/backend/utils/templates/invite_member.html
+++ b/backend/utils/templates/invite_member.html
@@ -67,11 +67,10 @@
         <button>
             <a href="https://www.fasttaski.ru">Принять приглашение</a>
         </button>
-        <div class="otp">{{ otp }}</div>
         <div class="footer">
             С уважением, <br>
             Команда нашего сервиса<br>
-            <a href="https://www.fasttaski.ru">https://www.fasttaski.ru</a>
+            <a href="https://www.fasttaski.ru">https://www.fasttaski.ru/{{ team_id }}/invite/{{ token }}</a>
         </div>
     </div>
 </body>
