--- a/frontend/src/components/DashboardNavbar/DashboardNavbar.module.scss
+++ b/frontend/src/components/DashboardNavbar/DashboardNavbar.module.scss
@@ -1,27 +1,92 @@
 .navbar {
   display: flex;
-  width: 218px;
-  height: 100vh;
+  height: calc(100vh - 120px);
+  padding: 72px 0px 0 32px;
   flex-direction: column;
-  border-radius: 0px 16px 16px 0px;
-  background: #1f1f1f;
-  padding: 32px 16px 32px 24px;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-shrink: 0;
+  gap: 32px;
+
+  .navSection {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+  }
+
+  .navItem {
+    width: 264px;
+    padding: 8px 12px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    cursor: pointer;
+
+    .icon {
+      background-color: rgba(255, 255, 255, 0.8);
+    }
+  }
+
+  .navItemActive {
+    width: 234px;
+    padding: 8px 12px;
+    border-radius: 12px;
+    background: rgba(36, 74, 127, 0.2);
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    color: #126df7;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    cursor: pointer;
+
+    .icon {
+      background-color: #126df7;
+    }
+  }
+
+  .titleGroup {
+    color: rgba(255, 255, 255, 0.4);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+    margin-bottom: 4px;
+  }
 }
 
-.personLine {
-  display: flex;
-  align-items: center;
-  gap: 8px;
+.icon {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  mask-size: cover;
+  -webkit-mask-size: cover;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-position: center;
+}
 
-  p {
-    color: #fff;
-    font-size: 20px;
-    font-weight: 400;
-  }
+.gear {
+  mask-image: url("/icons/Gear.svg");
+  -webkit-mask-image: url("/icons/Gear.svg");
+}
 
-  .logoutBtn {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-  }
+.list {
+  mask-image: url("/icons/list.svg");
+  -webkit-mask-image: url("/icons/list.svg");
+}
+
+.user {
+  mask-image: url("/icons/User.svg");
+  -webkit-mask-image: url("/icons/User.svg");
 }
