--- a/frontend/src/components/TasksContainer/TasksContainer.module.scss
+++ b/frontend/src/components/TasksContainer/TasksContainer.module.scss
@@ -1,6 +1,6 @@
 .dashboard {
   width: 100vw;
-  margin: 36px 36px 0 36px;
+  margin: 28px 32px 0 36px;
 
   .dashboardTools {
     display: flex;
@@ -52,11 +52,63 @@
 
 .tasksContainer {
   display: flex;
-  height: calc(100vh - 90px);
-  padding: 24px 24px 0px 24px;
+  height: calc(100vh - 205px);
+  padding: 32px 32px 0 32px;
   gap: 24px;
   flex: 1 0 0;
-  border-radius: 16px 16px 0px 0px;
+  border-radius: 16px;
   background: #1f1f1f;
   margin-top: 16px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup {
+  display: flex;
+  width: 550px;
+  padding: 24px 24px 32px 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 36px;
+  border-radius: 24px;
+  background: #1f1f1f;
+}
+
+.popupHeader {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  text-align: center;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-bottom: 39px;
+
+  img {
+    cursor: pointer;
+  }
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 14px;
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
