--- a/frontend/src/components/ProfileContainer/ProfileContainer.module.scss
+++ b/frontend/src/components/ProfileContainer/ProfileContainer.module.scss
@@ -5,19 +5,24 @@
     padding: 36px 36px 0px 36px;
     gap: 16px;
     width: 100%;
-    height: 100vh; 
+    height: 100vh;
     overflow: hidden;
+
+    h1 {
+        color: rgba(255, 255, 255, 1);
+
+        font-weight: 700;
+        font-size: 40px;
+    }
 
     .containerForInfo {
         display: flex;
         flex-direction: column;
-        flex-grow: 1; 
-        min-height: 0; 
+        flex-grow: 1;
+        min-height: 0;
 
-        background-color: rgba(31, 31, 31, 1);
         width: 100%;
         height: 100%;
-        padding: 24px;
         gap: 48px;
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
@@ -42,6 +47,22 @@
     }
 
     .profilePhoto {
+        display: flex;
+        flex-direction: row;
+        width: 672px;
+        height: 164px;
+        justify-content: space-between;
+        border-radius: 40px;
+        padding: 32px;
+
+        background-color: rgba(31, 31, 31, 1);
+
+        .btns {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
         h2 {
             color: rgba(255, 255, 255, 1);
             font-weight: 600;
@@ -55,6 +76,11 @@
     }
 
     .personalData {
+        background-color: rgba(31, 31, 31, 1);
+        border-radius: 40px;
+        gap: 24px;
+        padding: 32px;
+
         h2 {
             color: rgba(255, 255, 255, 1);
             font-weight: 600;
