creation of task form

--- a/frontend/src/components/TasksContainer/TasksContainer.module.scss
+++ b/frontend/src/components/TasksContainer/TasksContainer.module.scss
@@ -96,7 +96,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  margin-bottom: 39px;
+  // margin-bottom: 39px;
 
   img {
     cursor: pointer;
