--- a/frontend/src/components/Task/Task.module.scss
+++ b/frontend/src/components/Task/Task.module.scss
@@ -77,3 +77,54 @@
     }
   }
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup {
+  display: flex;
+  width: 550px;
+  padding: 24px 24px 32px 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 36px;
+  border-radius: 24px;
+  background: #1f1f1f;
+}
+
+.popupHeader {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  text-align: center;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+
+  img {
+    cursor: pointer;
+  }
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 14px;
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
