--- a/frontend/src/components/ProfileContainer/ProfileContainer.module.scss
+++ b/frontend/src/components/ProfileContainer/ProfileContainer.module.scss
@@ -3,12 +3,11 @@
     flex-direction: column;
     left: 218px;
     padding: 36px 36px 0px 36px;
-    gap: 16px;
+
     width: 100%;
-    height: 100vh;
     overflow: hidden;
 
-    h1 {
+    .title {
         color: rgba(255, 255, 255, 1);
 
         font-weight: 700;
@@ -18,68 +17,160 @@
     .containerForInfo {
         display: flex;
         flex-direction: column;
-        flex-grow: 1;
-        min-height: 0;
 
         width: 100%;
         height: 100%;
-        gap: 48px;
+
         border-top-left-radius: 16px;
         border-top-right-radius: 16px;
-        overflow-y: auto;
-
-        &::-webkit-scrollbar {
-            width: 8px;
-        }
-        &::-webkit-scrollbar-thumb {
-            background-color: #555;
-            border-radius: 4px;
-        }
-        &::-webkit-scrollbar-track {
-            background-color: #333;
-        }
-    }
-
-    .title {
-        color: rgba(255, 255, 255, 1);
-        font-weight: 700;
-        font-size: 32px;
-    }
-
-    .profilePhoto {
-        display: flex;
-        flex-direction: row;
-        width: 672px;
-        height: 164px;
-        justify-content: space-between;
-        border-radius: 40px;
-        padding: 32px;
-
-        background-color: rgba(31, 31, 31, 1);
-
-        .btns {
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-        }
 
         h2 {
             color: rgba(255, 255, 255, 1);
+
             font-weight: 600;
             font-size: 24px;
-            margin-bottom: 24px;
+
+            margin-top: 24px;
+            margin-bottom: 12px;
         }
 
-        .photo {
-            margin-left: 30px;
+        .blockWithAvatar {
+            display: flex;
+            flex-direction: row;
+            gap: 24px;
+
+            .profilePhoto {
+                display: flex;
+                flex-direction: row;
+                width: 100%;
+                justify-content: space-between;
+                border-radius: 40px;
+                padding: 32px;
+                gap: 24px;
+
+                background-color: rgba(31, 31, 31, 1);
+
+                .btns {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 12px;
+
+                    .firstButton {
+                        background-color: rgba(93, 145, 245, 0.9);
+                        color: rgba(255, 255, 255, 1);
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        border-radius: 14px;
+                        padding-top: 12px;
+                        padding-right: 16px;
+                        padding-bottom: 12px;
+                        padding-left: 16px;
+                        gap: 10px;
+
+                        font-weight: 400;
+                        font-size: 19px;
+                    }
+                    .secondButton {
+                        background-color: rgba(255, 255, 255, 0.1);
+                        color: rgba(255, 255, 255, 1);
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        border-radius: 14px;
+                        padding-top: 12px;
+                        padding-right: 16px;
+                        padding-bottom: 12px;
+                        padding-left: 16px;
+                        gap: 10px;
+
+                        font-family: Roboto;
+                        font-weight: 400;
+                        font-size: 19px;
+                        line-height: 19px;
+                        letter-spacing: 0%;
+                    }
+                }
+
+                h2 {
+                    color: rgba(255, 255, 255, 1);
+                    font-weight: 600;
+                    font-size: 24px;
+                    margin-bottom: 24px;
+                }
+
+                .photo {
+                    margin-left: 30px;
+                }
+            }
+
+            @media (max-width: 1440px) {
+                .profilePhoto{
+                    width: 712px;
+                }
+            }
+
+            .changesButton {
+                background-color: rgba(31, 31, 31, 1);
+
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                border-radius: 40px;
+                padding: 32px;
+                gap: 29px;
+
+                .uSure {
+                    color: rgba(255, 255, 255, 1);
+
+                    font-weight: 400;
+                    font-size: 20px;
+                }
+
+                .containerForBtns {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 12px;
+
+                    .first {
+                        background-color: rgba(93, 145, 245, 0.9);
+                        color: rgba(255, 255, 255, 1);
+
+                        font-weight: 400;
+                        font-size: 18px;
+
+                        border-radius: 14px;
+                        padding-top: 12px;
+                        padding-right: 16px;
+                        padding-bottom: 12px;
+                        padding-left: 16px;
+                        gap: 10px;
+                    }
+
+                    .second {
+                        background-color: rgba(31, 31, 31, 1);
+                        color: rgba(255, 255, 255, 1);
+
+                        border-radius: 14px;
+                        padding-top: 12px;
+                        padding-right: 16px;
+                        padding-bottom: 12px;
+                        padding-left: 16px;
+
+                        font-weight: 400;
+                        font-size: 19px;
+                    }
+                }
+            }
         }
     }
 
     .personalData {
-        background-color: rgba(31, 31, 31, 1);
         border-radius: 40px;
-        gap: 24px;
-        padding: 32px;
+        gap: 32px;
 
         h2 {
             color: rgba(255, 255, 255, 1);
@@ -89,10 +180,12 @@
         }
 
         .containerForInputs {
+            background-color: rgba(31, 31, 31, 1);
             display: flex;
             flex-direction: column;
-            gap: 12px;
-            margin-left: 24px;
+            border-radius: 40px;
+            gap: 24px;
+            padding: 32px;
 
             label {
                 color: rgba(255, 255, 255, 1);
@@ -110,6 +203,12 @@
                     border-radius: 16px;
                     padding: 12px 16px;
                 }
+            }
+        }
+
+        @media (max-width: 1440px) {
+            .containerForInputs {
+                width: 712px;
             }
         }
     }
