--- a/frontend/src/components/ProfileContainer/ProfileContainer.module.scss
+++ b/frontend/src/components/ProfileContainer/ProfileContainer.module.scss
@@ -145,7 +145,7 @@
 
                             input {
                                 background-color: rgba(22, 22, 22, 1);
-                                color: rgba(128, 128, 128, 1);
+                                color: rgb(255, 255, 255);
                                 font-weight: 400;
                                 font-size: 16px;
                                 width: 600px;
