profile without avatar

--- a/frontend/src/components/ProfileContainer/ProfileContainer.module.scss
+++ b/frontend/src/components/ProfileContainer/ProfileContainer.module.scss
@@ -49,6 +49,7 @@
                 .profilePhoto {
                     display: flex;
                     flex-direction: row;
+                    align-items: center;
                     width: 100%;
                     justify-content: space-between;
                     border-radius: 40px;
@@ -56,6 +57,15 @@
                     gap: 24px;
 
                     background-color: rgba(31, 31, 31, 1);
+
+                    p {
+                        color: rgba(255, 255, 255, 1);
+
+                        font-weight: 600;
+                        font-size: 12px;
+
+                        transition: all 0.3s ease-in-out;
+                    }
 
                     .btns {
                         display: flex;
@@ -82,7 +92,7 @@
                             transition: background-color 0.3s ease;
 
                             &:hover {
-                              background-color: #2b6dd5; 
+                                background-color: #2b6dd5;
                             }
                         }
                         .secondButton {
@@ -108,7 +118,7 @@
                             transition: background-color 0.3s ease;
 
                             &:hover {
-                              background-color: #575a5f; 
+                                background-color: #575a5f;
                             }
                         }
                     }
@@ -212,7 +222,7 @@
                         transition: background-color 0.3s ease;
 
                         &:hover {
-                          background-color: #2b6dd5; 
+                            background-color: #2b6dd5;
                         }
                     }
 
@@ -232,7 +242,7 @@
                         transition: background-color 0.3s ease;
 
                         &:hover {
-                          background-color: #575a5f; 
+                            background-color: #575a5f;
                         }
                     }
                 }
